k8s/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiap-videos-api
spec:
  rules:
    - host: api.staging.fiap-videos.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-fiap-videos-api
                port:
                  number: 80
